K3S/app-deployment/wikijs/wikijs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "wikijs"
  namespace: wikijs
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
  selector:
    app: "wikijs"
